@@ -1,6 +1,13 @@
 
 No release numbers
 ------------------
+ - Fri Dec 15 02:04:12 UTC 2000
+  - Parse rate changes *properly*
+  - Add sample code to faimtest demonstrating my approximations
+      on how to fiddle with aim_conn_setlatency() in relation
+      to the rate changes (properly wildly conservative). [I also
+      copied this stuff into mfaim.]
+
  - Thu Dec 14 03:39:34 UTC 2000
   - Change the 0x01 to a 0x00 in auth request to make buddy lists work again
   - Rearrange bytes in setversions() to match winaim
